# py.meta-info

./: .gitignore  README.md  decoration_helper.py  decorators.py  generator.py  meta_info_store.py  setup.cfg
src/: __init__.py  decoration_helper.py  decorators.py  interferences.py  meta_info_store.py
