[metadata]
name = meta-info
version = 0.1.0
url = https://github.com/work-work-komei/py.meta-info
author = Hiroaki Kobayashi
author_email = koba.work.work1127@gmail.com
license_file = MIT
description = Meta info decorators for class and members
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =

[options.packages.find]
where=src
